# qutim

./: .directory  .gitignore  .gitmodules  AUTHORS  CCBYSA  CHANGELOG  CMakeLists.txt  COPYING  COPYING.libs  CPackOptions.cmake.in  ChangeLog  INSTALL  README.md  TODO  capabilty.cpp  capabilty.h  codestyle.xml  dataunit.cpp  dataunit.h  fix-qt-extensions.perl  flap.cpp  flap.h  icons.qrc  icq.pro  icq_global.h  icqaccount.cpp  icqaccount.h  icqcontact.cpp  icqcontact.h  icqcontact_p.h  icqprotocol.cpp  icqprotocol.h  init-repository.sh  jreen.qbs  k8json.cpp  k8json.h  main.cpp  md5login.cpp  md5login.h  messageplugin.cpp  (+47 more)
aescrypto/: CMakeLists.txt
aescrypto/src/: aescryptomodule.cpp  aescryptoservice.cpp  aescryptoservice.h
aspeller/: CMakeLists.txt
aspeller/src/: aspellchecker.cpp  aspellchecker.h  aspellplugin.cpp  aspellplugin.h  spellhighlighter.cpp  spellhighlighter.h
awn/: CMakeLists.txt  TODO
awn/src/: awn.cpp  awn.h  awnservice.cpp  awnservice.h
config/: CMakeLists.txt
config/generic/: profile.json
config/mac/: CMakeLists.txt  appearance.json  profile.json
config/maemo5/: appearance.json  profile.json
config/maemo6/: CMakeLists.txt  appearance.json  profile.json
config/win/: profile.json
connectionmanager/: CMakeLists.txt
connectionmanager/src/: connectionmanager.cpp  connectionmanager.h  managersettings.cpp  managersettings.h  managersettings.ui
core/: .gitignore  AUTHORS  CMakeLists.txt  CPackOptions.cmake.in  Framework.qbs  Info.plist  artwork.qbs  core.qbs  edditaccount.cpp  edditaccount.ui  libqutim-headers.qbs  libqutim-headers.qbs.orig  libqutim.qbs  libqutim.qbs.orig  loginform.ui  main.cpp  qutim.icns  qutim.icons.rdef  qutim.qbs  qutim.qrc  translations.qbs  vaccount.cpp  vavatarmanagement.cpp  vavatarmanagement.h  vcontactlist.cpp  vcontactlist.h  vpluginsystem.cpp  vstatusobject.cpp  vstatusobject.h
core/cmake/: FindQutIM.cmake  FindQxt.cmake  QtBundleUtils.cmake  QutIMMacros.cmake
core/contributers/: rederick.json  samvo.json
core/devels/: degtep.json  sauron.json
core/libqutim/: CMakeLists.txt  abstractcontact.cpp  abstractcontact.h  abstractsearchrequest.cpp  abstractsearchrequest.h  abstractsearchrequest_p.h  abstractwizardpage.cpp  abstractwizardpage.h  account.cpp  account.h  account_p.h  accountmanager.cpp  accountmanager.h  accountmanager_p.h  actionbox.cpp  actionbox.h  actionbox_p.h  actiongenerator.cpp  actiongenerator.h  actiongenerator_p.h  actiontoolbar.cpp  actiontoolbar.h  actiontoolbar_p.h  asyncresult.cpp  asyncresult.h  authorizationdialog.cpp  authorizationdialog.h  buddy.cpp  buddy.h  buddy_p.h  chatsession.cpp  chatsession.h  chatunit.cpp  chatunit.h  chatunit_p.h  conference.cpp  conference.h  config.cpp  config.h  configbase.h  (+169 more)
core/share/: CMakeLists.txt
core/src/: modulemanagerimpl.cpp  modulemanagerimpl.h  profilecreationpage.cpp  profilecreationwizard.cpp  profiledialog.cpp  profiledialog.h
core/test/: test.cpp
core/utils/: deployqutim.sh
crash/: CMakeLists.txt  crash.pro
crash/src/: crashplugin.cpp  crashplugin.h
dbusnotifications/: CMakeLists.txt
dbusnotifications/src/: dbusbackend.cpp  dbusbackend.h  dplugin.cpp
deployment/: CMakeLists.txt  create-app-mac.sh  create-app-windows-msvc.ps1
deployment/all/: installScript.qs  package.xml
deployment/config/: installer-offline.xml
emoticons/: CMakeLists.txt
emoticons/src/: kdeemoticonslayer.cpp  kdeemoticonslayer.h  kdeemoticonsplugin.cpp  kdeemoticonsplugin.h
indicator/: CMakeLists.txt  qutim
indicator/src/: indicator.cpp  indicator.h  indicatorservice.cpp  indicatorservice.h
integrations/: CMakeLists.txt
jabber/: CMakeLists.txt
jabber/cmake_modules/: FindGNUTLS.cmake  FindIDN.cmake
jabber/src/: jabber_global.cpp  jabber_global.h  jplugin.cpp  jplugin.h
kde-integration/: CMakeLists.txt  COPYING
kde-integration/shared/: shareddata.h
kde-integration/src/: kdeintegration.cpp  kdeintegration.h  quetzalgui.h
kdeintegration/: CMakeLists.txt
kdeintegration/phonon/: CMakeLists.txt
kdeintegration/src/: kdeintegration.cpp  quetzalgui.cpp  quetzalgui.h
kineticpopups-ng/: CMakeLists.txt
kineticpopups-ng/src/: CMakeLists.txt  backend.cpp  backend.h  kineticpopup.h  widgetplacer.cpp
libqutim/: CMakeLists.txt  abstractcontact.cpp  abstractcontact.h  abstractlayer.cpp  abstractlayer.h  abstractsearchrequest.h  abstractwizardpage.cpp  abstractwizardpage.h  account.cpp  account.h  account_p.h  accountmanager.h  actionbox.cpp  actionbox.h  actionbox_p.h  actiongenerator.cpp  actiongenerator.h  actiongenerator_p.h  actiontoolbar.cpp  actiontoolbar.h  actiontoolbar_p.h  authorizationdialog.cpp  authorizationdialog.h  buddy.cpp  buddy.h  buddy_p.h  chatsession.cpp  chatsession.h  chatunit.cpp  chatunit.h  chatunit_p.h  conference.cpp  conference.h  config.cpp  config.h  configbackend.cpp  configbackend.h  configbase.cpp  configbase.h  configbase_p.h  (+140 more)
libqutim/doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  DoxygenLayout.xml.in
libqutim/game/: config.cpp  config.h
libs/: CMakeLists.txt
libs/QZipReader/: CMakeLists.txt
libs/gloox/: CMakeLists.txt  LICENSE  Makefile  README  asyncdns.cpp  asyncdns.h  asyncdnshandler.h  bob.cpp  bob.h  chatstatefilter.cpp  client.cpp  client.h  clientbase.cpp  clientbase.h  cmake_install.cmake  compressionbase.h  compressiondefault.h  config.h  config.h.cmake  config.h.symbian  config.h.symbian.cmake  config.h.unix  config.h.unix.cmake  config.h.win  config.h.win.cmake  connectionbosh.cpp  connectioncompression.cpp  connectioncompression.h  connectionhttpproxy.cpp  connectiontcpbase.cpp  connectiontls.cpp  connectiontls.h  dns.cpp  (+58 more)
macintegration/: CMakeLists.txt
nowplaying/: .directory  CMakeLists.txt  GPL_v3  nowplaying.pro  res.qrc
olddelegate/: CMakeLists.txt  contactlistitemdelegate.cpp  contactlistitemdelegate.h
oscar/: CMakeLists.txt
phononsound/: CMakeLists.txt
plugman/: CMakeLists.txt  TODO
protocols/: .gitignore  CMakeLists.txt  protocols.qbs
qmlpopups/: CMakeLists.txt
quetzal/: CMakeLists.txt
sdlsound/: CMakeLists.txt
speller/: CMakeLists.txt
(+5794 files in other folders)
