set(QUTIM_CONFIG_DIR ${QUTIM_SHARE_DIR}/config)
if(WIN32)
	add_subdirectory(win)
elseif(APPLE)
	set(QUTIM_CONFIG_DIR ${QUTIM_BUNDLE_NAME}/Contents/Resources/config)
	add_subdirectory(mac)
elseif(MAEMO5)
	add_subdirectory(maemo5)
elseif(MAEMO6)
	add_subdirectory(maemo6)
else()
	add_subdirectory(generic)
endif()
