CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( indicator )
SET(PROJECT_VERSION "0.1")

ADD_DEFINITIONS( -DDESKTOPDIR="${CMAKE_INSTALL_PREFIX}/share/applications" )
FIND_PACKAGE(PkgConfig REQUIRED)
pkg_check_modules(INDICATE REQUIRED indicate>=0.2.1)
pkg_check_modules(INDICATEQT REQUIRED indicate-qt>=0.2.2)

INCLUDE_DIRECTORIES(
	${INDICATE_INCLUDE_DIRS}
	${INDICATEQT_INCLUDE_DIRS}
	)
LINK_DIRECTORIES(
	${INDICATE_LIBRARY_DIRS}
	${INDICATEQT_LIBRARY_DIRS}
	)

SET(QUTIM_PATH "" CACHE FILEPATH "Path to qutim sources")
IF(QUTIM_PATH)
    SET(QUTIM_INCLUDE_DIRS ${QUTIM_PATH}/libqutim/include)
    SET(QUTIM_LIBRARY_DIR ${QUTIM_PATH}/libqutim/)
    SET(QUTIM_CMAKE_PLUGIN ${QUTIM_PATH}/cmake/QutimPlugin.cmake)
ELSE(QUTIM_PATH)
	SET(QUTIM_CMAKE_PLUGIN ${CMAKE_ROOT}/Modules/QutimPlugin.cmake)
ENDIF(QUTIM_PATH)
INCLUDE( ${QUTIM_CMAKE_PLUGIN} )

FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/qutim ${CMAKE_INSTALL_PREFIX}/share/applications/qutim.desktop)

LIST(APPEND INDICATOR_LIBS ${INDICATE_LIBRARIES} ${INDICATEQT_LIBRARIES})
ADD_QUTIMPLUGIN_EXT2(
	"indicator"
	"src"
	""
	"${INDICATOR_LIBS}"
	)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/qutim DESTINATION
	"share/indicators/messages/applications"
	)
